devide to sections

--- a/Elli.html
+++ b/Elli.html
@@ -23,6 +23,25 @@
     <title>Dementia App | Elli</title>
   </head>
   <body>
+    <div class="row">
+      <div class="container-fluid" id="first-section">hi</div>
+      <div
+        class="container-fluid"
+        id="second-section"
+        style="background: white;"
+      >
+        hi
+      </div>
+      <div class="container-fluid" id="third-section">hi</div>
+      <div
+        class="container-fluid"
+        id="fourth-section"
+        style="background: white;"
+      >
+        hi
+      </div>
+    </div>
+
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
