first section done

--- a/Elli.html
+++ b/Elli.html
@@ -19,27 +19,64 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
+
     <link rel="stylesheet" href="Elli.css" />
     <title>Dementia App | Elli</title>
   </head>
   <body>
-    <div class="row">
-      <div class="container-fluid" id="first-section">hi</div>
-      <div
-        class="container-fluid"
-        id="second-section"
-        style="background: white;"
-      >
-        hi
+    <div class="container" id="first-section">
+      <div class="presentation">
+        <h4
+          class="font-h4 color-1"
+          style="font-size: 60px; font-family: roboto-thin, roboto, sans-serif;"
+        >
+          <span style="font-weight: bold;" style="letter-spacing: 0em;"
+            >elli</span
+          >
+          <span style="letter-spacing: 0em;">is</span>
+        </h4>
+        <h4 class="color-1">
+          PEACE
+        </h4>
+        <h4 class="color-1">
+          OF MIND.
+        </h4>
+        <h6 class="color-2">
+          <span class="color-2" style="letter-spacing: 0em;"
+            >Peace of mind for the caregivers of those living with
+            dementia</span
+          >
+        </h6>
       </div>
-      <div class="container-fluid" id="third-section">hi</div>
-      <div
-        class="container-fluid"
-        id="fourth-section"
-        style="background: white;"
-      >
-        hi
+      <div class="learn-more-button">
+        <a href="#third-section">Learn more </a>
       </div>
+
+      <div class="phone-icon">
+        <img
+          id="comp-ka2b1c7yimgimage"
+          style="
+            object-position: 50% 50%;
+            width: 287px;
+            height: 527px;
+            object-fit: cover;
+          "
+          alt="Untitled drawing (10).png"
+          data-type="image"
+          itemprop="image"
+          src="https://static.wixstatic.com/media/314f91_54814b140d564151acf18e32330321da~mv2.png/v1/fill/w_287,h_527,al_c,q_85,usm_0.66_1.00_0.01/Untitled%20drawing%20(10).webp"
+        />
+      </div>
+    </div>
+
+    <div
+      class="container-fluid"
+      id="second-section"
+      style="background: white;"
+    ></div>
+    <div class="container-fluid" id="third-section">hi</div>
+    <div class="container-fluid" id="fourth-section" style="background: white;">
+      hi
     </div>
 
     <script
