finishing the 1st mock-up

--- a/Elli.html
+++ b/Elli.html
@@ -20,6 +20,11 @@
       crossorigin="anonymous"
     />
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
     <link rel="stylesheet" href="Elli.css" />
     <title>Dementia App | Elli</title>
   </head>
@@ -69,14 +74,189 @@
       </div>
     </div>
 
-    <div
-      class="container-fluid"
-      id="second-section"
-      style="background: white;"
-    ></div>
-    <div class="container-fluid" id="third-section">hi</div>
+    <div class="container-fluid" id="second-section" style="background: white;">
+      <div class="row" style="padding-top: 100px;">
+        <div class="feature-box container col-4">
+          <div class="heart-icon container rounded-circle">
+            <i class="fa fa-heart"></i>
+          </div>
+          <p>
+            MEDICATION SCHEDULE
+          </p>
+
+          <span
+            >Ensure your loved one is reminded to take their medication and be
+            notified when they do</span
+          >
+        </div>
+        <div class="feature-box container col-4">
+          <div class="heart-icon container rounded-circle">
+            <i class="fa fa-heart"></i>
+          </div>
+          <p>
+            TO-DO LIST
+          </p>
+
+          <span
+            >Set a list of tasks and remind them based on time or location,
+            further notifying you when completed</span
+          >
+        </div>
+      </div>
+
+      <div class="row" style="padding-top: 100px;">
+        <div class="feature-box container col-4">
+          <div class="heart-icon container rounded-circle">
+            <i class="fa fa-heart"></i>
+          </div>
+          <p>
+            EVENT REMINDERS
+          </p>
+
+          <span
+            >Help them to remember important appointments and be notified when
+            they arrive</span
+          >
+        </div>
+        <div class="feature-box container col-4">
+          <div class="heart-icon container rounded-circle">
+            <i class="fa fa-heart"></i>
+          </div>
+          <p>
+            GPS TRACKING​
+          </p>
+
+          <span
+            >​ Keep them safe and know they're not lost with GPS alerts based on
+            set locations</span
+          >
+        </div>
+      </div>
+
+      <!-- finish -->
+    </div>
+    <div class="container-fluid" id="third-section">
+      <div class="subscribtion">
+        <form>
+          <div class="row">
+            <div class="col">
+              <input
+                type="text"
+                class="form-control"
+                placeholder="First name"
+              />
+            </div>
+            <div class="col">
+              <input type="text" class="form-control" placeholder="Last name" />
+            </div>
+            <div class="col">
+              <input type="text" class="form-control" placeholder="Email" />
+            </div>
+            <div class="col">
+              <button class="btn btn-dark">
+                Subscribe
+              </button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
     <div class="container-fluid" id="fourth-section" style="background: white;">
-      hi
+      <div class="row">
+        <div class="container team">
+          <img
+            id="comp-kdbiec6iimgimage"
+            style="
+              object-position: 50% 50%;
+              width: 717px;
+              height: 188px;
+              object-fit: cover;
+            "
+            alt="team.png"
+            data-type="image"
+            itemprop="image"
+            src="https://static.wixstatic.com/media/314f91_1be45a959296425988097dc6c9c48edf~mv2.png/v1/fill/w_717,h_188,al_c,q_85,usm_0.66_1.00_0.01/team.webp"
+          />
+        </div>
+      </div>
+      <div class="row" style="margin-top: 50px;">
+        <div
+          class="container"
+          style="text-align: center; padding: 0 50px 0 50px;"
+        >
+          <span
+            style="
+              text-align: center;
+              font-weight: bold;
+              font-size: 18px;
+              line-height: normal;
+              letter-spacing: normal;
+            "
+            >OUR FOUNDING TEAM</span
+          >
+
+          <p style="margin: 16px 0 20px 0;">
+            Krissy, Matteo and I are a team with a unique set of professional
+            and educational know-how, coupled with personal experiences
+            resulting in the passion to deliver.
+          </p>
+
+          <p style="margin: 16px 0 16px 0;">
+            Krissy has a Masters of Social work and 16 years as a clinical
+            social worker dealing with the issues the informal care network
+            face, Paul an MBA and 10 years experience leading cross-functionally
+            in product focused organisations, Matteo a specialist in mobile
+            technologies and a senior developer for 13 years - all three, a
+            passion and drive for creating a difference through projects that
+            promote social change.
+          </p>
+        </div>
+      </div>
+      <div
+        class="row"
+        style="margin-top: 40px; height: 90px; background: rgba(51, 13, 84, 1);"
+      >
+        <div class="container" style="text-align: center;">
+          <span>
+            <a href="https://www.facebook.com/elliappco" target="_blank">
+              <img
+                id="comp-ka2e4axm0imageimageimage"
+                alt="Facebook"
+                data-type="image"
+                itemprop="image"
+                src="https://static.wixstatic.com/media/e0678ef25486466ba65ef6ad47b559e1.png/v1/fill/w_73,h_73,al_c,q_85,usm_0.66_1.00_0.01/e0678ef25486466ba65ef6ad47b559e1.webp"
+                style="
+                  width: 73px;
+                  height: 73px;
+                  object-fit: cover;
+                  margin-right: 50px;
+                  margin-top: 10px;
+                "
+            /></a>
+          </span>
+
+          <span>
+            <a
+              href="https://www.linkedin.com/company/elliappco/"
+              target="_blank"
+            >
+              <img
+                id="comp-ka2e4axm1imageimageimage"
+                alt="LinkedIn"
+                data-type="image"
+                itemprop="image"
+                src="https://static.wixstatic.com/media/f61c7a3b4b4947b28511a25034973383.png/v1/fill/w_73,h_73,al_c,q_85,usm_0.66_1.00_0.01/f61c7a3b4b4947b28511a25034973383.webp"
+                style="
+                  width: 73px;
+                  height: 73px;
+                  object-fit: cover;
+                  margin-right: 20px;
+                  margin-top: 10px;
+                "
+            /></a>
+          </span>
+        </div>
+      </div>
     </div>
 
     <script
