clean code( all images & icons  are local ) .

--- a/Index.html
+++ b/Index.html
@@ -5,12 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="https://static.wixstatic.com/media/314f91_8e7f8c8bbfb346689f3b525a0833f674%7Emv2.png/v1/fill/w_32%2Ch_32%2Clg_1%2Cusm_0.66_1.00_0.01/314f91_8e7f8c8bbfb346689f3b525a0833f674%7Emv2.png"
-      type="image/png"
-    />
-    <link
-      rel="apple-touch-icon"
-      href="https://static.wixstatic.com/media/314f91_8e7f8c8bbfb346689f3b525a0833f674%7Emv2.png/v1/fill/w_32%2Ch_32%2Clg_1%2Cusm_0.66_1.00_0.01/314f91_8e7f8c8bbfb346689f3b525a0833f674%7Emv2.png"
+      href="/assets/logos/elli-logo.png"
       type="image/png"
     />
     <link
@@ -25,7 +20,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
 
-    <link rel="stylesheet" href="Elli.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Dementia App | Elli</title>
   </head>
   <body>
@@ -33,21 +28,17 @@
       <div class="presentation">
         <h4
           class="font-h4 color-1"
-          style="font-size: 60px; font-family: roboto-thin, roboto, sans-serif;"
+          style="font-size: 60px; font-family: roboto-thin, roboto, sans-serif"
         >
-          <span style="font-weight: bold;" style="letter-spacing: 0em;"
+          <span style="font-weight: bold" style="letter-spacing: 0em"
             >elli</span
           >
-          <span style="letter-spacing: 0em;">is</span>
+          <span style="letter-spacing: 0em">is</span>
         </h4>
-        <h4 class="color-1">
-          PEACE
-        </h4>
-        <h4 class="color-1">
-          OF MIND.
-        </h4>
+        <h4 class="color-1">PEACE</h4>
+        <h4 class="color-1">OF MIND.</h4>
         <h6 class="color-2">
-          <span class="color-2" style="letter-spacing: 0em;"
+          <span class="color-2" style="letter-spacing: 0em"
             >Peace of mind for the caregivers of those living with
             dementia</span
           >
@@ -58,31 +49,17 @@
       </div>
 
       <div class="phone-icon">
-        <img
-          id="comp-ka2b1c7yimgimage"
-          style="
-            object-position: 50% 50%;
-            width: 287px;
-            height: 527px;
-            object-fit: cover;
-          "
-          alt="Untitled drawing (10).png"
-          data-type="image"
-          itemprop="image"
-          src="https://static.wixstatic.com/media/314f91_54814b140d564151acf18e32330321da~mv2.png/v1/fill/w_287,h_527,al_c,q_85,usm_0.66_1.00_0.01/Untitled%20drawing%20(10).webp"
-        />
+        <img alt="Phone Image" src="./assets/images/phone-image.jpg" />
       </div>
     </div>
 
-    <div class="container-fluid" id="second-section" style="background: white;">
-      <div class="row" style="padding-top: 100px;">
+    <div class="container-fluid" id="second-section" style="background: white">
+      <div class="row" style="padding-top: 100px">
         <div class="feature-box container col-4">
           <div class="heart-icon container rounded-circle">
             <i class="fa fa-heart"></i>
           </div>
-          <p>
-            MEDICATION SCHEDULE
-          </p>
+          <p>MEDICATION SCHEDULE</p>
 
           <span
             >Ensure your loved one is reminded to take their medication and be
@@ -93,9 +70,7 @@
           <div class="heart-icon container rounded-circle">
             <i class="fa fa-heart"></i>
           </div>
-          <p>
-            TO-DO LIST
-          </p>
+          <p>TO-DO LIST</p>
 
           <span
             >Set a list of tasks and remind them based on time or location,
@@ -104,14 +79,12 @@
         </div>
       </div>
 
-      <div class="row" style="padding-top: 100px;">
+      <div class="row" style="padding-top: 100px">
         <div class="feature-box container col-4">
           <div class="heart-icon container rounded-circle">
             <i class="fa fa-heart"></i>
           </div>
-          <p>
-            EVENT REMINDERS
-          </p>
+          <p>EVENT REMINDERS</p>
 
           <span
             >Help them to remember important appointments and be notified when
@@ -122,9 +95,7 @@
           <div class="heart-icon container rounded-circle">
             <i class="fa fa-heart"></i>
           </div>
-          <p>
-            GPS TRACKING​
-          </p>
+          <p>GPS TRACKING​</p>
 
           <span
             >​ Keep them safe and know they're not lost with GPS alerts based on
@@ -153,36 +124,22 @@
               <input type="text" class="form-control" placeholder="Email" />
             </div>
             <div class="col">
-              <button class="btn btn-dark">
-                Subscribe
-              </button>
+              <button class="btn btn-dark">Subscribe</button>
             </div>
           </div>
         </form>
       </div>
     </div>
-    <div class="container-fluid" id="fourth-section" style="background: white;">
+    <div class="container-fluid" id="fourth-section" style="background: white">
       <div class="row">
         <div class="container team">
-          <img
-            id="comp-kdbiec6iimgimage"
-            style="
-              object-position: 50% 50%;
-              width: 717px;
-              height: 188px;
-              object-fit: cover;
-            "
-            alt="team.png"
-            data-type="image"
-            itemprop="image"
-            src="https://static.wixstatic.com/media/314f91_1be45a959296425988097dc6c9c48edf~mv2.png/v1/fill/w_717,h_188,al_c,q_85,usm_0.66_1.00_0.01/team.webp"
-          />
+          <img alt="The team members" src="./assets/images/team-members.jpg" />
         </div>
       </div>
-      <div class="row" style="margin-top: 50px;">
+      <div class="row" style="margin-top: 50px">
         <div
           class="container"
-          style="text-align: center; padding: 0 50px 0 50px;"
+          style="text-align: center; padding: 0 50px 0 50px"
         >
           <span
             style="
@@ -195,13 +152,13 @@
             >OUR FOUNDING TEAM</span
           >
 
-          <p style="margin: 16px 0 20px 0;">
+          <p style="margin: 16px 0 20px 0">
             Krissy, Matteo and I are a team with a unique set of professional
             and educational know-how, coupled with personal experiences
             resulting in the passion to deliver.
           </p>
 
-          <p style="margin: 16px 0 16px 0;">
+          <p style="margin: 16px 0 16px 0">
             Krissy has a Masters of Social work and 16 years as a clinical
             social worker dealing with the issues the informal care network
             face, Paul an MBA and 10 years experience leading cross-functionally
@@ -214,24 +171,15 @@
       </div>
       <div
         class="row"
-        style="margin-top: 40px; height: 90px; background: rgba(51, 13, 84, 1);"
+        style="margin-top: 40px; height: 90px; background: rgba(51, 13, 84, 1)"
       >
-        <div class="container" style="text-align: center;">
+        <div class="container" style="text-align: center">
           <span>
             <a href="https://www.facebook.com/elliappco" target="_blank">
               <img
-                id="comp-ka2e4axm0imageimageimage"
                 alt="Facebook"
-                data-type="image"
-                itemprop="image"
-                src="https://static.wixstatic.com/media/e0678ef25486466ba65ef6ad47b559e1.png/v1/fill/w_73,h_73,al_c,q_85,usm_0.66_1.00_0.01/e0678ef25486466ba65ef6ad47b559e1.webp"
-                style="
-                  width: 73px;
-                  height: 73px;
-                  object-fit: cover;
-                  margin-right: 50px;
-                  margin-top: 10px;
-                "
+                src="./assets/icons/facebook-icon.jpg"
+                style="margin-right: 50px; margin-top: 10px"
             /></a>
           </span>
 
@@ -241,18 +189,9 @@
               target="_blank"
             >
               <img
-                id="comp-ka2e4axm1imageimageimage"
                 alt="LinkedIn"
-                data-type="image"
-                itemprop="image"
-                src="https://static.wixstatic.com/media/f61c7a3b4b4947b28511a25034973383.png/v1/fill/w_73,h_73,al_c,q_85,usm_0.66_1.00_0.01/f61c7a3b4b4947b28511a25034973383.webp"
-                style="
-                  width: 73px;
-                  height: 73px;
-                  object-fit: cover;
-                  margin-right: 20px;
-                  margin-top: 10px;
-                "
+                src="./assets/icons/linkedIn-icon.jpg"
+                style="margin-right: 20px; margin-top: 10px"
             /></a>
           </span>
         </div>
