clean code (all styles attr moved to the css file)

--- a/Index.html
+++ b/Index.html
@@ -26,19 +26,14 @@
   <body>
     <div class="container" id="first-section">
       <div class="presentation">
-        <h4
-          class="font-h4 color-1"
-          style="font-size: 60px; font-family: roboto-thin, roboto, sans-serif"
-        >
-          <span style="font-weight: bold" style="letter-spacing: 0em"
-            >elli</span
-          >
-          <span style="letter-spacing: 0em">is</span>
+        <h4 class="font-h4 color-1">
+          <span class="elli-word">elli</span>
+          <span class="is-word">is</span>
         </h4>
         <h4 class="color-1">PEACE</h4>
         <h4 class="color-1">OF MIND.</h4>
         <h6 class="color-2">
-          <span class="color-2" style="letter-spacing: 0em"
+          <span class="color-2"
             >Peace of mind for the caregivers of those living with
             dementia</span
           >
@@ -53,8 +48,8 @@
       </div>
     </div>
 
-    <div class="container-fluid" id="second-section" style="background: white">
-      <div class="row" style="padding-top: 100px">
+    <div class="container-fluid" id="second-section">
+      <div class="row first-row">
         <div class="feature-box container col-4">
           <div class="heart-icon container rounded-circle">
             <i class="fa fa-heart"></i>
@@ -79,7 +74,7 @@
         </div>
       </div>
 
-      <div class="row" style="padding-top: 100px">
+      <div class="row second-row">
         <div class="feature-box container col-4">
           <div class="heart-icon container rounded-circle">
             <i class="fa fa-heart"></i>
@@ -130,35 +125,23 @@
         </form>
       </div>
     </div>
-    <div class="container-fluid" id="fourth-section" style="background: white">
+    <div class="container-fluid" id="fourth-section">
       <div class="row">
-        <div class="container team">
+        <div class="container team-images">
           <img alt="The team members" src="./assets/images/team-members.jpg" />
         </div>
       </div>
       <div class="row" style="margin-top: 50px">
-        <div
-          class="container"
-          style="text-align: center; padding: 0 50px 0 50px"
-        >
-          <span
-            style="
-              text-align: center;
-              font-weight: bold;
-              font-size: 18px;
-              line-height: normal;
-              letter-spacing: normal;
-            "
-            >OUR FOUNDING TEAM</span
-          >
+        <div class="container team-presentation">
+          <span class="title">OUR FOUNDING TEAM</span>
 
-          <p style="margin: 16px 0 20px 0">
+          <p class="first-paragraph">
             Krissy, Matteo and I are a team with a unique set of professional
             and educational know-how, coupled with personal experiences
             resulting in the passion to deliver.
           </p>
 
-          <p style="margin: 16px 0 16px 0">
+          <p class="second-paragraph">
             Krissy has a Masters of Social work and 16 years as a clinical
             social worker dealing with the issues the informal care network
             face, Paul an MBA and 10 years experience leading cross-functionally
@@ -169,17 +152,14 @@
           </p>
         </div>
       </div>
-      <div
-        class="row"
-        style="margin-top: 40px; height: 90px; background: rgba(51, 13, 84, 1)"
-      >
-        <div class="container" style="text-align: center">
+      <div class="row footer">
+        <div class="container">
           <span>
             <a href="https://www.facebook.com/elliappco" target="_blank">
               <img
+                class="facebook-icon"
                 alt="Facebook"
                 src="./assets/icons/facebook-icon.jpg"
-                style="margin-right: 50px; margin-top: 10px"
             /></a>
           </span>
 
@@ -189,9 +169,9 @@
               target="_blank"
             >
               <img
+                class="LinkedIn-icon"
                 alt="LinkedIn"
                 src="./assets/icons/linkedIn-icon.jpg"
-                style="margin-right: 20px; margin-top: 10px"
             /></a>
           </span>
         </div>
