refactoring the code (the subscription section)

--- a/newindex.html
+++ b/newindex.html
@@ -1,36 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <link rel="stylesheet" href="newstule.css" />
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
-        <title>Dementia App | Elli</title>
-    </head>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="newstule.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap"
+      rel="stylesheet"
+    />
+    <title>Dementia App | Elli</title>
+  </head>
 
-    <body>
-        <div class="hero">
-            <div class="hero-left">
-                    <h1><span>elli</span> is <br/>peace-of-mind</h1>
-                    <p>Peace of mind for the caregivers of those living with dementia</p>
-                <div class="learn-more-button">
-                    <a href="#third-section">Learn More</a>
-                </div>
-            </div>
-            <div class="app-preview">
-                <img alt="Phone Image" src="./assets/images/phone-image.jpg" />
-            </div>
+  <body>
+    <div class="main-container">
+      <div class="hero">
+        <div class="hero-left">
+          <h1><span>elli</span> is <br />peace-of-mind</h1>
+          <p>Peace of mind for the caregivers of those living with dementia</p>
+          <div class="learn-more-button">
+            <a href="#third-section">Learn More</a>
+          </div>
         </div>
-        <div class="features-container-top">
-            <div class="features-container-top-left">
-                <img src="assets/icons/facebook-icon.jpg" style="background-color: blue;">
-                <p>MEDICATION SCHEDULE</p>
-                <p>Ensure your loved one is reminded to take their medication and be notified when they do</p>
-            </div>
-            <div class="features-container-top-right">
-                
-            </div>
+        <div class="app-preview">
+          <img alt="Phone Image" src="./assets/images/phone-image.jpg" />
         </div>
-        <div class="features-container-bottom">
-            <div class="features-container-top-"
+      </div>
+      <div class="features-container-top">
+        <div class="features-container-top-left">
+          <img
+            src="assets/icons/facebook-icon.jpg"
+            style="background-color: blue"
+          />
+          <p>MEDICATION SCHEDULE</p>
+          <p>
+            Ensure your loved one is reminded to take their medication and be
+            notified when they do
+          </p>
         </div>
-    </body>
+        <div class="features-container-top-right"></div>
+      </div>
+
+      <!-- begin of subscribtion section  -->
+      <div id="third-section">
+        <h5>Learn More by Subscribing Below</h5>
+        <div class="subscribtion">
+          <form>
+            <input id="first-name" type="text" placeholder="First Name" />
+            <input id="last-name" type="text" placeholder="Last Name" />
+            <input id="email" type="text" placeholder="Email" />
+            <button class="submit-button" type="submit">Subscribe</button>
+          </form>
+        </div>
+      </div>
+      <!-- End of subscribtion section  -->
+    </div>
+  </body>
+</html>
