responsivity - small phones

--- a/newindex.html
+++ b/newindex.html
@@ -24,7 +24,7 @@
           <img alt="Phone Image" src="./assets/images/phone-image.jpg" />
         </div>
       </div>
-      <div class="features-container-top">
+      <!-- <div class="features-container-top">
         <div class="features-container-top-left">
           <img
             src="assets/icons/facebook-icon.jpg"
@@ -37,7 +37,7 @@
           </p>
         </div>
         <div class="features-container-top-right"></div>
-      </div>
+      </div> -->
 
       <!-- begin of subscribtion section  -->
       <div id="third-section">
