create 4th section for team members

--- a/newindex.html
+++ b/newindex.html
@@ -13,7 +13,7 @@
 
   <body>
     <div class="main-container">
-      <div class="hero">
+      <!--   <div class="hero">
         <div class="hero-left">
           <h1><span>elli</span> is <br />peace-of-mind</h1>
           <p>Peace of mind for the caregivers of those living with dementia</p>
@@ -24,7 +24,7 @@
         <div class="app-preview">
           <img alt="Phone Image" src="./assets/images/phone-image.jpg" />
         </div>
-      </div>
+      </div> -->
       <!-- <div class="features-container-top">
         <div class="features-container-top-left">
           <img
@@ -52,7 +52,35 @@
           </form>
         </div>
       </div>
-      <!-- End of subscribtion section  -->
+      <!-- the team members section  -->
+      <div id="fourth-section">
+        <div class="main-container">
+          <div class="image-container">
+            <img src="assets/images/team-members.jpg" alt="team-members" />
+          </div>
+          <div class="texts-container">
+            <p class="title">OUR FOUNDING TEAM</p>
+            <p class="zero-width-space">&#8203;</p>
+            <p>
+              Krissy, Matteo and I are a team with a unique set of professional
+              and educational know-how, coupled with personal experiences
+              resulting in the passion to deliver.
+            </p>
+            <p class="zero-width-space">&#8203;</p>
+            <p>
+              Krissy has a Masters of Social work and 16 years as a clinical
+              social worker dealing with the issues the informal care network
+              face, Paul an MBA and 10 years experience leading
+              cross-functionally in product focused organisations, Matteo a
+              specialist in mobile technologies and a senior developer for 13
+              years - all three, a passion and drive for creating a difference
+              through projects that promote social change.
+            </p>
+            <p class="zero-width-space">&#8203;</p>
+          </div>
+        </div>
+      </div>
+      <!-- the end of team members section  -->
     </div>
   </body>
 </html>
