creating 4th sectionas a footer with icnons

--- a/newindex.html
+++ b/newindex.html
@@ -60,7 +60,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div>  -->
 
       <!-- begin of subscribtion section  -->
       <div id="third-section">
@@ -102,7 +102,31 @@
           </div>
         </div>
       </div>
-      <!-- the end of team members section  -->
+      <!-- the footer  -->
+      <footer style="height: 80px; background: rgba(51, 13, 84, 1)">
+        <div class="icons-container">
+          <span>
+            <a href="https://www.facebook.com/elliappco" target="_blank">
+              <img
+                class="facebook-icon"
+                alt="Facebook"
+                src="./assets/icons/facebook-icon.jpg"
+            /></a>
+          </span>
+          &nbsp;&nbsp;
+          <span>
+            <a
+              href="https://www.linkedin.com/company/elliappco/"
+              target="_blank"
+            >
+              <img
+                class="LinkedIn-icon"
+                alt="LinkedIn"
+                src="./assets/icons/linkedIn-icon.jpg"
+            /></a>
+          </span>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
