Made the features section responsive

--- a/newindex.html
+++ b/newindex.html
@@ -13,7 +13,7 @@
 
   <body>
     <div class="main-container">
-      <!--   <div class="hero">
+        <div class="hero">
         <div class="hero-left">
           <h1><span>elli</span> is <br />peace-of-mind</h1>
           <p>Peace of mind for the caregivers of those living with dementia</p>
@@ -27,7 +27,7 @@
       </div>
 
 
-      <div class='features-container'>
+<!--       <div class='features-container'>
         <div class='row'>
           <div class='column'>
             <div class='features-column-left'>
@@ -60,7 +60,30 @@
             </div>
           </div>
         </div>
-      </div>  -->
+      </div> -->
+
+      <div class='features-container'>
+        <div class="feature-left">
+          <img src="assets/icons/facebook-icon.jpg" style="background-color: blue" />
+          <h4>MEDICATION SCHEDDULE</h4>
+          <p>Ensure your loved one is reminded to take their medication and be notified when they do.</p>
+        </div>
+        <div class="feature-right">
+          <img src="assets/icons/facebook-icon.jpg" style="background-color: blue" />
+          <h4>TO-DO LIST</h4>
+          <p>Set a list of tasks and remind them based on time or location, further notifying you when completed</p>
+        </div>
+        <div class="feature-left">
+          <img src="assets/icons/facebook-icon.jpg" style="background-color: blue" />
+          <h4>EVENT REMINDERS</h4>
+          <p>Help them to remember important appointments and be notified when they arrive</p>
+        </div>
+        <div class="feature-right">
+          <img src="assets/icons/facebook-icon.jpg" style="background-color: blue" />
+          <h4>GPS TRACKING​</h4>
+          <p>Keep them safe and know they're not lost with GPS alerts based on set locations</p>
+        </div>
+      </div>
 
       <!-- begin of subscribtion section  -->
       <div id="third-section">
