update the team picture to splited divs

--- a/newindex.html
+++ b/newindex.html
@@ -77,8 +77,31 @@
       <!-- the team members section  -->
       <div id="fourth-section">
         <div class="main-container">
-          <div class="image-container">
-            <img src="assets/images/team-members.jpg" alt="team-members" />
+          <div class="first-row">
+            <!-- <img src="assets/images/team-members.jpg" alt="team-members" /> -->
+            <div class="c-members">
+              <div class="member">
+                <img src="assets/images/Paul_avatar_image.jpeg" alt="Paul" />
+                <p>Paul Nichols</p>
+                <h5>CEO - Marketing, Strategy</h5>
+              </div>
+              <div class="member">
+                <img
+                  src="assets/images/Krissy_image_avatar.png"
+                  alt="Krissy Millar"
+                />
+                <p>Krissy Millar</p>
+                <h5>SME - Industry knowledge</h5>
+              </div>
+              <div class="member">
+                <img
+                  src="assets/images/Antony_avatar_image.jpeg"
+                  alt="Matteo Antony Mistretta"
+                />
+                <p>Matteo Antony Mistretta</p>
+                <h5>CTO - Lead Development</h5>
+              </div>
+            </div>
           </div>
           <div class="texts-container">
             <p class="title">OUR FOUNDING TEAM</p>
