--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="./assets/logos/elli-logo.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Dementia App | Elli</title>
   </head>
