integrate mailchimp to the subscribe form

--- a/index.html
+++ b/index.html
@@ -67,11 +67,62 @@
 
       <section class="subscription" id="subscribe">
         <h5>Learn More by Subscribing Below</h5>
-        <form>
-          <input id="first-name" type="text" placeholder="First Name" />
-          <input id="last-name" type="text" placeholder="Last Name" />
-          <input id="email" type="text" placeholder="Email" />
-          <button class="submit-button" type="submit">Subscribe</button>
+
+        <form
+          action="https://elliapp.us3.list-manage.com/subscribe/post?u=55eff7fd86ec88925f500159e&amp;id=6bf536012e"
+          method="post"
+          id="mc-embedded-subscribe-form"
+          name="mc-embedded-subscribe-form"
+          class="the-form validate"
+          target="_blank"
+          novalidate
+        >
+          <input
+            type="text"
+            value=""
+            name="FNAME"
+            class=""
+            id="mce-FNAME"
+            placeholder="First Name"
+            required
+          />
+          <input
+            type="text"
+            value=""
+            name="LNAME"
+            class=""
+            id="mce-LNAME"
+            placeholder="Last Name"
+            required
+          />
+          <input
+            type="email"
+            value=""
+            name="EMAIL"
+            class="required email"
+            id="mce-EMAIL"
+            placeholder="Email"
+            required
+          />
+
+          <button
+            value="Subscribe"
+            name="subscribe"
+            id="mc-embedded-subscribe"
+            class="button submit-button"
+            type="submit"
+          >
+            Subscribe
+          </button>
+
+          <div style="position: absolute; left: -5000px" aria-hidden="true">
+            <input
+              type="text"
+              name="b_55eff7fd86ec88925f500159e_6bf536012e"
+              tabindex="-1"
+              value=""
+            />
+          </div>
         </form>
       </section>
 
