make some minor changes

--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
     <main>
       <section class="hero">
         <div class="hero-left">
-          <h1><span>elli</span> is <br />peace-of-mind</h1>
-          <p>Peace of mind for the caregivers of those living with dementia</p>
+          <h1>
+            <span>elli</span><br />
+            <div>remote-care mobile</div>
+          </h1>
+          <p>
+            application delivering peace-of-mind to the family of those living
+            with dementia
+          </p>
           <a class="learn-more-button" href="#subscribe"> Learn More </a>
         </div>
         <div class="app-preview">
@@ -50,8 +56,8 @@
             <h4>EVENT REMINDERS</h4>
             <p>
               Help them to remember important appointments and be notified when
-              they arrive
             </p>
+            they arrive
           </div>
 
           <div class="feature">
@@ -119,7 +125,7 @@
         <section class="texts container">
           <h3>OUR FOUNDING TEAM</h3>
           <p>
-            Krissy, Matteo and I are a team with a unique set of professional
+            Paul, Krissy and Matteo are a team with a unique set of professional
             and educational know-how, coupled with personal experiences
             resulting in the passion to deliver.
           </p>
